# whiteboard

./: .gitignore  404.html  ASSESSMENT_AND_PLAN.md  BUGFIX.md  CHANGELOG.md  FINAL_REPORT.md  GETTING_STARTED.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  PHASE3_SUMMARY.md  README.md  TAURI_README.md  hashmap.json  index.html  package-lock.json  package.json
assets/: app.1_IJh1am.js  app.B2DTsoSO.js  app.BKLh2eku.js  app.BWWrEb9i.js  app.BwTYjOJL.js  app.CgXrs20J.js  app.D03MUhUa.js  app.DUJOxUBn.js  app.DjMZS4Ps.js  app.ecxqt_WS.js  desktop_index.md.BJv2L1rE.js  desktop_index.md.BJv2L1rE.lean.js  desktop_index.md.ZO148COK.js  desktop_installation.md.BZVxEqZa.js  desktop_installation.md.BZVxEqZa.lean.js  desktop_installation.md.DSyBTgFw.js  desktop_installation.md.DSyBTgFw.lean.js  desktop_installation.md.Ddf5-XzE.js  desktop_installation.md.Ddf5-XzE.lean.js  desktop_laser-spotlight.md.CFfPHJs4.js  desktop_laser-spotlight.md.CFfPHJs4.lean.js  desktop_obs-integration.md.4GfcQmsF.js  desktop_obs-integration.md.4GfcQmsF.lean.js  desktop_presentation-mode.md.BE_ft7zP.lean.js  desktop_presentation-mode.md.BVo34BJ8.js  desktop_presentation-mode.md.BVo34BJ8.lean.js  features_animations.md.BlhIy3em.js  features_animations.md.BlhIy3em.lean.js  features_animations.md.C-3ZEjHd.js  features_animations.md.C-3ZEjHd.lean.js  features_animations.md.CWxR4nHe.lean.js  features_animations.md.CykVgkRl.js  (+61 more)
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: main.rs
(+168 files in other folders)
